i got some shit here

--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -148,7 +148,8 @@ dfc %>%
   mutate(Treat = ifelse(Att > 0, "Treated", "Control")) %>% 
   select(Treat, Total, Pct.NHA:Pct.COM) %>% 
   filter(complete.cases(.)) %>% 
-  tbl_summary(by = Treat) %>% 
+  tbl_summary(by = Treat, 
+                statistic = list(all_continuous() ~ "{mean} ({sd})")) %>% 
   add_p()
 
 ```
@@ -160,6 +161,9 @@ dfc %>%
 ```{r}
 
 
+summary(as.numeric(dfc[dfc$Year == 2010,]$months_of_cash))
+summary(dfc[dfc$Year == 2010,]$ngla_net_gain_loss / dfc[dfc$Year == 2010,]$ngla_revenue)
+
 did2s(
       data = dfc %>% 
         select(ID, Year, Tx, STATE, Sites, htn.rate, dm.rate, imm.rate, crc.rate, pap.rate, childbmi.rate, adultbmi.rate, ivd.rate, cad.rate, asthma.rate, Total, ngla_net_gain_loss, ngla_revenue, ngla_expense, Staff, months_of_cash, quick_ratio, fringe_rate) %>% 
@@ -168,7 +172,7 @@ did2s(
                months_of_cash = as.numeric(months_of_cash),
                quick_ratio = as.numeric(quick_ratio),
                fringe_rate = as.numeric(fringe_rate)) %>% 
-        inner_join(dfc %>% filter(Year == 2010) #& Total > 20000) 
+        inner_join(dfc %>% filter(Year == 2010 & ngla_net_gain_loss/ngla_revenue > 0.03) 
                    %>% select(ID, Pct.NHA:Pct.COM) %>% unique() , by = c("ID")) , 
       yname = "Qcomp", 
       treatment = "Tx",
@@ -179,10 +183,12 @@ did2s(
     )
 
 
-event_study(data = dfc %>% mutate(Qcomp = (dm.rate + htn.rate + crc.rate + pap.rate + childbmi.rate + adultbmi.rate) / 6), 
+event_study(data = dfc %>% mutate(Qcomp = (dm.rate + htn.rate + crc.rate + pap.rate + childbmi.rate + adultbmi.rate) / 6) %>% 
+              inner_join(dfc %>% filter(Year == 2010 & ngla_net_gain_loss/ngla_revenue > 0.03)#as.numeric(months_of_cash) < 2)#Total > 10000) 
+                   %>% select(ID) %>% unique() , by = c("ID")), 
   yname = "Qcomp", idname = "ID", tname = "Year", gname = "Att", estimator = "all", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless + Pct.MCD + Pct.MCR + Pct.None) %>% 
   filter(abs(term) <= 5) %>% 
-  #filter(estimator == "Gardner (2021)") %>% 
+  filter(estimator == "Gardner (2021)") %>% 
   ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
   #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
